--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 
     <meta charset="UTF-8">
-
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <title>蚁动科技-校园集结号</title>
 
     <link href="css/style.css" rel="stylesheet" type="text/css">
